Cache Robes inventory and equipment requirements on client tick